--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-icons": "^5.3.0",
     "sweetalert2": "^11.14.4"
   },
   "devDependencies": {
