--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "firebase": "^11.0.1",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
