--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "reactstrap": "^9.2.3",
     "redux-persist": "^6.0.0",
     "sweetalert2": "^11.14.4"
   },
