--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "firebase": "^11.0.1",
+    "moment": "^2.30.1",
     "next": "15.0.2",
     "next-auth": "^4.24.10",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.15.0",
+    "react-calendar": "^5.1.0",
+    "react-day-picker": "^9.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
