--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-big-calendar": "^1.15.0",
     "react-bootstrap": "^2.10.5",
     "react-calendar": "^5.1.0",
+    "react-calendly": "^4.3.1",
     "react-day-picker": "^9.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
