--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
@@ -17,6 +18,7 @@
     "moment": "^2.30.1",
     "next": "15.0.2",
     "next-auth": "^4.24.10",
+    "next-iron-session": "^4.2.0",
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
     "react-bootstrap": "^2.10.5",
