--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.0.2",
     "next-auth": "^4.24.10",
     "next-iron-session": "^4.2.0",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
     "react-bootstrap": "^2.10.5",
