--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "firebase": "^11.0.1",
+    "lucide-react": "^0.477.0",
     "moment": "^2.30.1",
     "next": "15.0.2",
     "next-auth": "^4.24.10",
@@ -31,7 +34,8 @@
     "react-redux": "^9.1.2",
     "reactstrap": "^9.2.3",
     "redux-persist": "^6.0.0",
-    "sweetalert2": "^11.14.4"
+    "sweetalert2": "^11.14.4",
+    "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
     "@types/react": "18.3.12",
