--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "firebase": "^11.0.1",
     "lucide-react": "^0.477.0",
@@ -23,6 +24,8 @@
     "next-auth": "^4.24.10",
     "next-iron-session": "^4.2.0",
     "ngrok": "^5.0.0-beta.2",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.2",
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
     "react-bootstrap": "^2.10.5",
@@ -30,7 +33,8 @@
     "react-calendly": "^4.3.1",
     "react-day-picker": "^9.3.0",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-final-form": "^6.5.9",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.1.2",
     "reactstrap": "^9.2.3",
     "redux-persist": "^6.0.0",
