--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,5 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",  // Root directory
-    "paths": {
-      "@/*": ["./src/*"],  // For src folder
-      "@/firebase": ["./firebase.js"]  // Alias to your firebase.js in the root
-    }
+    "forceConsistentCasingInFileNames": true
   }
 }
